[shenker/cloning,cloning] WIP NAO strain import. Added _id entry to Registry.get

--- a/paulssonlab/src/paulssonlab/shenker/cloning/201121 Misfolding.ipynb
+++ b/paulssonlab/src/paulssonlab/shenker/cloning/201121 Misfolding.ipynb
@@ -48,8 +48,7 @@
     "import paulssonlab.cloning.sequence as sequence\n",
     "import paulssonlab.cloning.golden_gate as golden_gate\n",
     "import paulssonlab.cloning.codon as codon\n",
-    "import paulssonlab.cloning.optimization as optimization\n",
-    "import paulssonlab.cloning.registry as registry"
+    "import paulssonlab.cloning.optimization as optimization"
    ]
   },
   {
@@ -59,6 +58,24 @@
    "outputs": [],
    "source": [
     "hv.extension(\"bokeh\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Download data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!mkdir -p data/2013sigmafactorswitches_supp\n",
+    "!curl -b does_not_exist -Lo data/2013sigmafactorswitches_supp/supptable1.xlsx \"https://www.embopress.org/action/downloadSupplement?doi=10.1038%2Fmsb.2013.58&file=msb201358-sup-0002.xlsx\"\n",
+    "!curl -b does_not_exist -Lo data/2013sigmafactorswitches_supp/supptable2.xlsx \"https://www.embopress.org/action/downloadSupplement?doi=10.1038%2Fmsb.2013.58&file=msb201358-sup-0003.xlsx\""
    ]
   },
   {
@@ -83,15 +100,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "gc = pygsheets.authorize(service_account_file=\"credentials.json\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "session = benchlingapi.Session(config[\"benchling\"][\"api_key\"])"
    ]
   },
@@ -101,14 +109,54 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "reg = registry.Registry(gc, config[\"registry\"][\"folder\"])"
+    "gc = pygsheets.authorize(service_account_file=\"credentials.json\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "col = workflow.get_strain_collection_sheets(gc.drive.service, \"LIB\")\n",
+    "col"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "strain_sheet = gc.open_by_key(col[\"strains\"]).worksheet()\n",
+    "plasmid_sheet = gc.open_by_key(col[\"plasmids\"]).worksheet()\n",
+    "part_sheet = gc.open_by_key(col[\"parts\"]).worksheet()\n",
+    "part_type_sheet = gc.open_by_key(col[\"parts\"]).worksheet_by_title(\"Part types\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "drive_service = plasmid_sheet.client.drive.service\n",
+    "plasmid_folder = col[\"plasmid_maps\"]\n",
+    "plasmid_maps = api.google.list_drive(drive_service, root=plasmid_folder)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 2017 Khammash OptoT7"
+    "# 2013 Voigt sigma factors"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Import data"
    ]
   },
   {
@@ -117,14 +165,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "PLASMID_MAPS_FOLDER = \"1gpbR9Njm73enshW_U4TN7xbwqgRN-tOo\"\n",
-    "\n",
-    "\n",
-    "def get_plib(service, name, root):\n",
-    "    seq_file = api.google.get_drive_by_path(service, name, root=root)\n",
-    "    data = service.files().get_media(fileId=seq_file).execute().decode(\"utf8\")\n",
-    "    seq = api.read_sequence(data)\n",
-    "    return seq"
+    "sigmas = pd.read_excel(\n",
+    "    \"data/2013sigmafactorswitches_supp/supptable1.xlsx\", sheet_name=0, index_col=0\n",
+    ")"
    ]
   },
   {
@@ -133,7 +176,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "seq = get_plib(gc.drive.service, \"pLIB252.gbk\", PLASMID_MAPS_FOLDER)"
+    "antisigmas = pd.read_excel(\n",
+    "    \"data/2013sigmafactorswitches_supp/supptable1.xlsx\", sheet_name=2, index_col=0\n",
+    ")"
    ]
   },
   {
@@ -142,8 +187,202 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "primer1 = \"ATGAACACGATTAACATCGCTAAGAACGACT\"\n",
-    "primer2 = \"aaaaaaaa\" + primer1"
+    "sigma_promoters = pd.read_excel(\n",
+    "    \"data/2013sigmafactorswitches_supp/supptable1.xlsx\", sheet_name=1, index_col=0\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sigma_orthogonality_mean = pd.read_excel(\n",
+    "    \"data/2013sigmafactorswitches_supp/supptable2.xlsx\",\n",
+    "    sheet_name=0,\n",
+    "    index_col=0,\n",
+    "    nrows=27,\n",
+    "    skiprows=1,\n",
+    "    usecols=\"B:CJ\",\n",
+    ")\n",
+    "sigma_orthogonality_mean.index.name = \"Sigma\"\n",
+    "sigma_orthogonality_mean.columns.name = \"Antisigma\"\n",
+    "sigma_orthogonality_stddev = pd.read_excel(\n",
+    "    \"data/2013sigmafactorswitches_supp/supptable2.xlsx\",\n",
+    "    sheet_name=0,\n",
+    "    index_col=0,\n",
+    "    nrows=27,\n",
+    "    skiprows=31,\n",
+    "    usecols=\"B:CJ\",\n",
+    ")\n",
+    "sigma_orthogonality_stddev.index.name = \"Sigma\"\n",
+    "sigma_orthogonality_stddev.columns.name = \"Antisigma\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "antisigma_orthogonality_mean = pd.read_excel(\n",
+    "    \"data/2013sigmafactorswitches_supp/supptable2.xlsx\",\n",
+    "    sheet_name=2,\n",
+    "    index_col=0,\n",
+    "    nrows=25,\n",
+    "    skiprows=1,\n",
+    "    usecols=\"B:AL\",\n",
+    ")\n",
+    "antisigma_orthogonality_mean.index.name = \"Antisigma\"\n",
+    "antisigma_orthogonality_mean.columns.name = \"Sigma\"\n",
+    "antisigma_orthogonality_stddev = pd.read_excel(\n",
+    "    \"data/2013sigmafactorswitches_supp/supptable2.xlsx\",\n",
+    "    sheet_name=2,\n",
+    "    index_col=0,\n",
+    "    nrows=25,\n",
+    "    skiprows=29,\n",
+    "    usecols=\"B:AL\",\n",
+    ")\n",
+    "antisigma_orthogonality_stddev.index.name = \"Antisigma\"\n",
+    "antisigma_orthogonality_stddev.columns.name = \"Sigma\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sigma_titration = pd.read_excel(\n",
+    "    \"data/2013sigmafactorswitches_supp/supptable2.xlsx\",\n",
+    "    sheet_name=1,\n",
+    "    index_col=0,\n",
+    "    header=(0, 1),\n",
+    "    nrows=52,\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sigma_growth = pd.read_excel(\n",
+    "    \"data/2013sigmafactorswitches_supp/supptable2.xlsx\",\n",
+    "    sheet_name=3,\n",
+    "    skipfooter=2,\n",
+    "    header=(0, 1, 2),\n",
+    ")\n",
+    "sigma_growth.dropna(axis=1, how=\"all\", inplace=True)\n",
+    "sigma_growth.set_index(sigma_growth.columns[0], inplace=True)\n",
+    "sigma_growth.index.name = \"Sigma\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "antisigma_growth = pd.read_excel(\n",
+    "    \"data/2013sigmafactorswitches_supp/supptable2.xlsx\",\n",
+    "    sheet_name=4,\n",
+    "    skipfooter=2,\n",
+    "    header=(0, 1, 2),\n",
+    ")\n",
+    "antisigma_growth.dropna(axis=1, how=\"all\", inplace=True)\n",
+    "antisigma_growth.set_index(antisigma_growth.columns[0], inplace=True)\n",
+    "antisigma_growth.index.name = \"Antisigma\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sigma_thresh = 50\n",
+    "sigma_subset = sigma_orthogonality_mean.loc[\n",
+    "    (sigma_orthogonality_mean > sigma_thresh).any(axis=1)\n",
+    "]\n",
+    "sigma_subset = sigma_subset.loc[:, (sigma_subset > sigma_thresh).any(axis=0)]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Selected sigma factors"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sigmas_to_antisigmas = antisigma_orthogonality_mean.idxmax(axis=0).rename(\"Antisigma\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "selected_sigmas = [\n",
+    "    \"ECF03_1198\",\n",
+    "    \"ECF16_3622\",\n",
+    "    \"ECF20_992\",\n",
+    "    \"ECF38_1322\",\n",
+    "    \"ECF27_4265\",\n",
+    "    \"ECF22_4450\",\n",
+    "    \"ECF11_987\",\n",
+    "]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Tradeoffs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sigma_max = sigma_orthogonality_mean.max(axis=0).rename(\"Sigma max\")\n",
+    "antisigma_max = antisigma_orthogonality_mean.max(axis=0).rename(\"Antisigma max\")\n",
+    "sigma_growth100 = sigma_growth[\n",
+    "    (\"Transition phase assay (8 hr OD)\", \"Average\", \"100 µM\")\n",
+    "].rename(\"Sigma growth\")\n",
+    "antisigma_growth50 = antisigma_growth[\n",
+    "    (\"Transition phase assay (8 hr OD)\", \"Average\", \"50 nM\")\n",
+    "].rename(\"Antisigma growth\")\n",
+    "antisigma_growth50 = pd.merge(\n",
+    "    sigmas_to_antisigmas, antisigma_growth50, left_on=\"Antisigma\", right_index=True\n",
+    ")\n",
+    "sigma_activationrepression = pd.concat(\n",
+    "    (sigma_max, antisigma_max, sigma_growth100, antisigma_growth50), axis=1\n",
+    ")\n",
+    "sigma_activationrepression[\"Min growth\"] = sigma_activationrepression[\n",
+    "    [\"Sigma growth\", \"Antisigma growth\"]\n",
+    "].min(axis=1)\n",
+    "sigma_activationrepression[\"Selected\"] = sigma_activationrepression.index.isin(\n",
+    "    selected_sigmas\n",
+    ")\n",
+    "sigma_activationrepression[\"Promoter\"] = sigma_titration[\n",
+    "    (\"Unnamed: 1_level_0\", \"Promoter\")\n",
+    "]\n",
+    "sigma_subset_info = sigma_activationrepression[\n",
+    "    sigma_activationrepression[\"Selected\"] == True\n",
+    "]\n",
+    "sigma_subset_info = sigma_subset_info.reset_index().rename({\"index\": \"Sigma\"}, axis=1)"
    ]
   },
   {
@@ -291,6 +530,95 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Use DnaChisel to optimize sequences ourselves"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for item in tqdm(sequences_to_order.values()):\n",
+    "    # if cds_location is defined\n",
+    "    if item[\"cds_location\"] is not None:\n",
+    "        seq = item[\"initial_seq\"]\n",
+    "        new_seq = optimization.dnachisel(\n",
+    "            seq,\n",
+    "            *optimization.dnachisel_constraints_for_twist(\n",
+    "                seq,\n",
+    "                cds_location=item[\"cds_location\"],\n",
+    "                avoid_enzymes=avoid_enzymes,\n",
+    "                aa_to_codons=aa_to_codons,\n",
+    "                genetic_table=\"Bacterial\",\n",
+    "            ),\n",
+    "        )\n",
+    "        item[\"optimized_seq\"] = new_seq\n",
+    "        item[\"final_seq\"] = workflow.add_flanks(new_seq, [twist_adaptors])\n",
+    "    else:\n",
+    "        item[\"final_seq\"] = item[\"optimized_seq\"] = item[\"initial_seq\"]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Substitute sequences with Twist-optimized sequences"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Only needed if using Twist web interface to manually optimize sequences. Otherwise use DnaChisel and/or Twist API."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def _format_seq(seq):\n",
+    "    return str(sequence.get_seq(seq)).lower()\n",
+    "\n",
+    "\n",
+    "for item in sequences_to_order.values():\n",
+    "    if item[\"kind\"] != \"promoter\":\n",
+    "        print(f\"{item['name']}\\t{_format_seq(item['optimized_seq'])}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# TODO: we're cheating and manually running Twist codon optimization through the web interface\n",
+    "twist_seqs = pd.read_csv(\"201013voigtsigmas.csv\").set_index(\"Name\")\n",
+    "for item in sequences_to_order.values():\n",
+    "    name = item[\"name\"]\n",
+    "    if item[\"kind\"] != \"promoter\":\n",
+    "        try:\n",
+    "            if (\n",
+    "                _format_seq(item[\"optimized_seq\"]).lower()\n",
+    "                != twist_seqs.loc[name, \"Insert sequence\"].lower()\n",
+    "            ):\n",
+    "                print(f\"substituting codon-optimized Twist sequence for {name}\")\n",
+    "            else:\n",
+    "                print(f\"adding Twist adapters for {name}\")\n",
+    "            # TODO: copy features\n",
+    "            item[\"optimized_seq\"] = SeqRecord(\n",
+    "                Seq(twist_seqs.loc[name, \"Insert sequence\"])\n",
+    "            )\n",
+    "        except:\n",
+    "            print(f\"could not find Twist sequence for {name}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Check restriction sites"
    ]
   },
@@ -317,6 +645,29 @@
     "        if len(cuts) != expected_count:\n",
     "            print(\n",
     "                f\"Expected {expected_count} {enzyme} cuts in {item['name']}, instead found cuts at: {cuts}\"\n",
+    "            )"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Check that CDSes match expected translations"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for item in sequences_to_order.values():\n",
+    "    if \"aa_seq\" in item:\n",
+    "        aa_seq = item[\"aa_seq\"]\n",
+    "        translation = item[\"optimized_seq\"][slice(*item[\"cds_location\"])].translate()\n",
+    "        if aa_seq != translation.seq:\n",
+    "            print(\n",
+    "                f\"{item['name']}: translation did not match expected amino acid sequence\"\n",
     "            )"
    ]
   },
@@ -624,6 +975,74 @@
    "outputs": [],
    "source": [
     "plasmid_maps.keys()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Hotfix for parts"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pickle\n",
+    "\n",
+    "with open(\"201013voigtsigmas.json\", \"rb\") as f:\n",
+    "    data = pickle.load(f)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sequences_to_order = data[\"sequences_to_order\"]\n",
+    "oligos = data[\"oligos\"]\n",
+    "parts = data[\"parts\"]\n",
+    "part_row = data[\"part_row\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# had to convert int64 to Python int (JSON serialization issue; bug fixed in get_next_empty_row)\n",
+    "part_row = int(part_row)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def _format_seq(seq):\n",
+    "    return str(sequence.get_seq(seq)).lower()\n",
+    "\n",
+    "\n",
+    "for part in parts:\n",
+    "    part[\"Upstream overhang*\"] = _format_seq(part[\"Upstream overhang*\"])\n",
+    "    part[\"Downstream overhang*\"] = _format_seq(part[\"Downstream overhang*\"])\n",
+    "    part[\"Sequence*\"] = (\n",
+    "        part[\"Upstream overhang*\"] + part[\"Sequence*\"] + part[\"Downstream overhang*\"]\n",
+    "    )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "workflow.insert_parts(part_sheet, parts, part_row)"
    ]
   }
  ],
