--- a/paulssonlab/src/paulssonlab/shenker/cloning/210124 3G.ipynb
+++ b/paulssonlab/src/paulssonlab/shenker/cloning/210124 3G.ipynb
@@ -37,7 +37,8 @@
     "import paulssonlab.cloning.util as cloning_util\n",
     "import paulssonlab.cloning.sequence as sequence\n",
     "import paulssonlab.cloning.registry as registry\n",
-    "import paulssonlab.cloning.enzyme as enzyme"
+    "import paulssonlab.cloning.enzyme as enzyme\n",
+    "import paulssonlab.cloning.commands as commands"
    ]
   },
   {
@@ -87,89 +88,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "x = reg.get(\"UNS1_A\")\n",
-    "x"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "x = reg.get(\"pLIB200\")[\"_seq\"]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "x2 = x.reindex(-50)\n",
-    "x"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "y = reg.get(\"oLIB85\")[\"_seq\"]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "Ds"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "enzyme.re_digest(sequence.DsSeqRecord(x.reindex(-10), circular=False), Restriction.BsaI)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "enzyme.re_digest(x.reindex(-10), Restriction.BsaI, circular=False)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "enzyme.re_digest(x2, Restriction.BsaI)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "enzyme.re_digest(y, Restriction.BsaI)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "x = reg.get(\"\")\n",
     "x"
    ]
   },
@@ -410,7 +329,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# gibson two test seqs\n",
     "# gibson two GG'ed TUs\n",
     "# check we can PCR UNSes onto JUMP vector\n",
     "# check we can circularize a real 3G rxn"
@@ -488,15 +406,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import paulssonlab.cloning.commands as commands"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "commands.expr_parser.parse(\"oLIT1=oLIT2<oLIB1,oLIB2>/BsaI\")"
    ]
   },
@@ -555,7 +464,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "part_sheet.sync?"
+    "reg.get(\"pLIB252\")"
    ]
   },
   {
@@ -564,11 +473,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def get_named_sequence(name, part_sheet, plasmid_maps):\n",
-    "    # try plasmid, strain, part\n",
-    "    pass\n",
-    "\n",
-    "\n",
+    "def command(expr, execution_context):\n",
+    "    pass"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "def goldengate(*args):\n",
     "    return \"gg\", args\n",
     "\n",
@@ -577,9 +491,11 @@
     "    return \"3g\", args\n",
     "\n",
     "\n",
-    "commands = {\"GG\": goldengate, \"3G\": threeg}\n",
+    "def pcr(*args):\n",
+    "    return \"pcr\", args\n",
     "\n",
-    "get_named_sequence(\"pLIB27\")"
+    "\n",
+    "commands = {\"GG\": goldengate, \"3G\": threeg, \"PCR\": pcr}"
    ]
   },
   {
