--- a/paulssonlab/src/paulssonlab/shenker/cloning/210124 NAO strains import.ipynb
+++ b/paulssonlab/src/paulssonlab/shenker/cloning/210124 NAO strains import.ipynb
@@ -120,7 +120,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "lib_parts[lib_parts[\"Usage*\"].str.contains(\"pLIB1/\")].iloc[0]"
+    "lib_parts[lib_parts[\"Usage\"].str.contains(\"pLIB1/\")].iloc[0]"
    ]
   },
   {
@@ -138,18 +138,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "lib_strains.index.str.len()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "plasmid_wells = lib_strains[lib_strains.index.str.len() != 0]\n",
     "plasmid_wells = plasmid_wells[plasmid_wells[\"Tags\"].str.contains(\"3g\")]\n",
-    "plasmid_wells = plasmid_wells[[\"Plasmid(s)*\", \"Other Notes\"]]\n",
+    "plasmid_wells = plasmid_wells[[\"Plasmids\", \"Other Notes\"]]\n",
     "plasmid_wells[\"Well\"] = plasmid_wells[\"Other Notes\"].map(\n",
     "    lambda s: re.search(r\"Well: ([A-Z0-9]+)\", s).group(1)\n",
     ")"
@@ -161,7 +152,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "well_to_plasmid = dict(plasmid_wells[[\"Plasmid(s)*\", \"Well\"]].values[:, ::-1])"
+    "well_to_plasmid = dict(plasmid_wells[[\"Plasmids\", \"Well\"]].values[:, ::-1])"
    ]
   },
   {
@@ -184,7 +175,7 @@
     "    # LIB number: LIB262\n",
     "    if name.startswith(\"LIB\"):\n",
     "        strain = reg.get(name)\n",
-    "        plasmids = re.split(r\"\\s*,\\s*\", strain[\"Plasmid(s)*\"])\n",
+    "        plasmids = re.split(r\"\\s*,\\s*\", strain[\"Plasmids\"])\n",
     "        if len(plasmids) != 1:\n",
     "            raise ValueError(\n",
     "                f\"expecting a single plasmid for strain {name}: {plasmids}\"\n",
@@ -195,7 +186,7 @@
     "        )\n",
     "    elif name.startswith(\"pLIB\"):\n",
     "        part_name = (\n",
-    "            parts_sheet[parts_sheet[\"Usage*\"].str.contains(f\"{name}/\")].iloc[0].name\n",
+    "            parts_sheet[parts_sheet[\"Usage\"].str.contains(f\"{name}/\")].iloc[0].name\n",
     "        )\n",
     "        return part_name\n",
     "    # pLIB number: 199\n",
@@ -237,7 +228,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "get_part_name(reg, lib_parts, well_to_plasmid, name_corrections, \"LIB252\")"
+    "name_map = {}\n",
+    "for name in nao_names.index:\n",
+    "    name = str(name)\n",
+    "    new_name = get_part_name(reg, lib_parts, well_to_plasmid, name_corrections, name)\n",
+    "    name_map[name] = new_name"
    ]
   },
   {
@@ -246,10 +241,47 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "for n in nao_names.index:\n",
-    "    n = str(n)\n",
-    "    x = get_part_name(reg, lib_parts, well_to_plasmid, name_corrections, n)\n",
-    "    print(n, x)"
+    "tus[\n",
+    "    \"Description of TU function (e.g. expression strength, expressed protein, circuit it is intended for)\"\n",
+    "]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tu_to_command = {}\n",
+    "for _, row in tus.iterrows():\n",
+    "    uns_a = row[\"UNS_A\"]\n",
+    "    uns_e = row[\"UNS_E\"]\n",
+    "    promoter = name_map[str(row[\"Promoter (pLIB number or 3G part ID) \"])]\n",
+    "    rbs = name_map[str(row[\"Ribosome binding site (pLIB number or 3G part ID) \"])]\n",
+    "    cds = name_map[str(row[\"Coding region (pLIB number or 3G part ID) \"])]\n",
+    "    term = name_map[str(row[\"Terminator (pLIB number or 3G part ID) \"])]\n",
+    "    command = f\"@GG(UNS{uns_a}_A, {promoter}, {rbs}, {cds}, {term}, UNS{uns_e}_E)\"\n",
+    "    tu_to_command[int(row[\"tLIB number\"].replace(\"tLIB\", \"\"))] = command"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "strains.tail()[\"TUs\"].map(\n",
+    "    lambda s: \", \".join([tu_to_command[int(t)] for t in str(s).split(\",\")])\n",
+    ").values"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tu_to_command"
    ]
   },
   {
